Update userInfo api + add Error 401
