# internal/swagger/api_v1.0.json
@@ -66,7 +66,7 @@
           "security": []
         }
       },
-      "/userInfo": {
+      "/user": {
         "get": {
           "tags": [
             "authentication"
@@ -83,6 +83,16 @@
                 "application/json": {
                   "schema": {
                     "$ref": "#/components/schemas/UserInfo"
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Unauthorized Access",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Error"
                   }
                 }
               }
